--- a/repartition_experiments/cases_config.json
+++ b/repartition_experiments/cases_config.json
@@ -48,6 +48,16 @@
             "ref": 2
         }
     ],
+    "case 1_3":[
+        {
+            "R": [3900,3000,3500],
+            "I": [780,600,700],
+            "O": [650,500,500],
+            "B": [],
+            "volumestokeep": [],
+            "ref": 0
+        }
+    ],
     "case 2": [
         {
             "R": [3900,3000,3500],
