--- a/repartition_experiments/cases_config.json
+++ b/repartition_experiments/cases_config.json
@@ -1,16 +1,24 @@
 {
     "case 1_1": [
         {
-            "R": [3900,3000,3500],
-            "I": [780,600,700],
-            "O": [650,500,500],
+            "R": [3500,3500,3500],
+            "I": [875,875,875],
+            "O": [875,1750,875],
             "B": [],
             "volumestokeep": [],
             "ref": 0
+        },
+        {
+            "R": [3500,3500,3500],
+            "I": [875,875,875],
+            "O": [700,875,700],
+            "B": [],
+            "volumestokeep": [],
+            "ref": 1
         },{
-            "R": [3900,3000,3500],
-            "I": [390,300,350],
-            "O": [650,500,700],
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [500,500,500],
             "B": [],
             "volumestokeep": [],
             "ref": 2
@@ -18,61 +26,35 @@
     ],
     "case 1_2": [
         {
-            "R": [3900,3000,3500],
-            "I": [390,300,350],
-            "O": [325,250,250],
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [250,250,250],
             "B": [],
             "volumestokeep": [],
-            "ref": 0
+            "ref": 3
+        },{
+            "R": [3500,3500,3500],
+            "I": [175,175,175],
+            "O": [250,250,250],
+            "B": [],
+            "volumestokeep": [],
+            "ref": 4
         },
         {
-            "R": [3900,3000,3500],
-            "I": [195,150,175],
-            "O": [300,250,250],
+            "R": [3500,3500,3500],
+            "I": [350,875,350],
+            "O": [500,875,500],
             "B": [],
             "volumestokeep": [],
-            "ref": 1
-        },{
-            "R": [3900,3000,3500],
-            "I": [650,375,500],
-            "O": [390,300,350],
+            "ref": 5
+        },
+        {
+            "R": [3500,3500,3500],
+            "I": [350,875,350],
+            "O": [350,500,350],
             "B": [],
             "volumestokeep": [],
-            "ref": 2
-        }
-    ],
-    "case 2": [
-        {
-            "R": [3900,3000,3500],
-            "I": [780,600,700],
-            "O": [650,500,500],
-            "B": [390,600,700],
-            "volumestokeep": [1,2,3],
-            "ref": 0
-        }, {
-            "R": [3900,3000,3500],
-            "I": [390,300,350],
-            "O": [650,500,700],
-            "B": [390,600,700],
-            "volumestokeep": [1,2,3],
-            "ref": 1
-        }, {
-            "R": [3900,3000,3500],
-            "I": [390,300,350],
-            "O": [325,250,250],
-            "B": [195,300,350],
-            "volumestokeep": [1,2,3],
-            "ref": 2
-        }
-    ],
-    "case 3": [
-        {
-            "R": [3900,3000,3500],
-            "I": [780,600,700],
-            "O": [780,3000,700],
-            "B": [390,3000,700],
-            "volumestokeep": [1,2,3],
-            "ref": 0
+            "ref": 6
         }
     ]
 }
