updated policy for dealing with a special case

--- a/repartition_experiments/cases_config.json
+++ b/repartition_experiments/cases_config.json
@@ -56,5 +56,67 @@
             "volumestokeep": [],
             "ref": 6
         }
+    ],
+    "cases 3_1": [
+        {
+            "R": [3500,3500,3500],
+            "I": [875,875,875],
+            "O": [3500,3500,3500],
+            "B": [500, 3500, 3500],  
+            "volumestokeep": [1, 2, 3],
+            "ref": 0
+        },{
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [3500,3500,3500],
+            "B": [500, 3500, 3500],
+            "volumestokeep": [1, 2, 3],
+            "ref": 1
+        },{
+            "R": [3500,3500,3500],
+            "I": [875,875,875],
+            "O": [875,875,3500],
+            "B": [875, 875, 3500],
+            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
+            "ref": 2
+        },{
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [350,350,3500],
+            "B": [350, 350, 3500],
+            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
+            "ref": 3
+        }
+    ],
+    "cases 3_2": [
+        {
+            "R": [3500,3500,3500],
+            "I": [875,875,875],
+            "O": [875,3500,875],
+            "B": [875, 3500, 875],
+            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
+            "ref": 4
+        },{
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [350,3500,350],
+            "B": [350, 3500, 350],
+            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
+            "ref": 5
+        },{
+            "R": [3500,3500,3500],
+            "I": [875,875,875],
+            "O": [3500,875,875],
+            "B": [3500, 875, 875],
+            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
+            "ref": 6
+        },{
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [3500,350,350],
+            "B": [3500, 350, 350],
+            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
+            "ref": 7
+        }
     ]
 }
