--- a/repartition_experiments/cases_config.json
+++ b/repartition_experiments/cases_config.json
@@ -62,22 +62,22 @@
             "R": [3500,3500,3500],
             "I": [875,875,875],
             "O": [3500,3500,3500],
-            "B": [500, 3500, 3500],  
+            "B": [175, 3500, 3500],  
             "volumestokeep": [1, 2, 3],
             "ref": 0
         },{
             "R": [3500,3500,3500],
             "I": [350,350,350],
             "O": [3500,3500,3500],
-            "B": [500, 3500, 3500],
+            "B": [175, 3500, 3500],
             "volumestokeep": [1, 2, 3],
             "ref": 1
         },{
             "R": [3500,3500,3500],
             "I": [875,875,875],
             "O": [875,875,3500],
-            "B": [875, 875, 3500],
-            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
+            "B": [700, 875, 3500],
+            "volumestokeep": [1, 2, 3],
             "ref": 2
         },{
             "R": [3500,3500,3500],
@@ -93,8 +93,8 @@
             "R": [3500,3500,3500],
             "I": [875,875,875],
             "O": [875,3500,875],
-            "B": [875, 3500, 875],
-            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
+            "B": [700, 3500, 875],
+            "volumestokeep": [1, 2, 3],
             "ref": 4
         },{
             "R": [3500,3500,3500],
@@ -107,8 +107,8 @@
             "R": [3500,3500,3500],
             "I": [875,875,875],
             "O": [3500,875,875],
-            "B": [3500, 875, 875],
-            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
+            "B": [1750, 875, 875],
+            "volumestokeep": [1, 2, 3],
             "ref": 6
         },{
             "R": [3500,3500,3500],
@@ -117,6 +117,24 @@
             "B": [3500, 350, 350],
             "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
             "ref": 7
+        }
+    ],
+    "case 3_3": [
+        {
+            "R": [3500,3500,3500],
+            "I": [875,875,875],
+            "O": [3500,3500,3500],
+            "B": [500,3500,3500],
+            "volumestokeep": [1, 2, 3],
+            "ref": 8
+        },
+        {
+            "R": [3500,3500,3500],
+            "I": [875,875,875],
+            "O": [3500,3500,3500],
+            "B": [350,3500,3500],
+            "volumestokeep": [1, 2, 3],
+            "ref": 9
         }
     ]
 }
