--- a/repartition_experiments/cases_config.json
+++ b/repartition_experiments/cases_config.json
@@ -57,7 +57,7 @@
             "ref": 6
         }
     ],
-    "cases 3_1": [
+    "case 3_1": [
         {
             "R": [3500,3500,3500],
             "I": [875,875,875],
@@ -88,7 +88,7 @@
             "ref": 3
         }
     ],
-    "cases 3_2": [
+    "case 3_2": [
         {
             "R": [3500,3500,3500],
             "I": [875,875,875],
