--- a/repartition_experiments/cases_config.json
+++ b/repartition_experiments/cases_config.json
@@ -57,6 +57,16 @@
             "ref": 6
         }
     ],
+    "case 1_3": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,875,350],
+            "O": [500,875,500],
+            "B": [],
+            "volumestokeep": [],
+            "ref": 5
+        }
+    ],
     "case 3_1": [
         {
             "R": [3500,3500,3500],
