--- a/repartition_experiments/mid_cases_config.json
+++ b/repartition_experiments/mid_cases_config.json
@@ -51,5 +51,15 @@
             "volumestokeep": [],
             "ref": 6
         }
+    ],
+    "case 1_4":[
+        {
+            "R": [1400,1400,1400],
+            "I": [140,140,140],
+            "O": [100,100,100],
+            "B": [],
+            "volumestokeep": [],
+            "ref": 3
+        }
     ]
 }
