updated the cases

--- a/repartition_experiments/cases_config.json
+++ b/repartition_experiments/cases_config.json
@@ -15,16 +15,17 @@
             "B": [],
             "volumestokeep": [],
             "ref": 1
-        },{
+        }
+    ],
+    "case 1_2": [
+        {
             "R": [3500,3500,3500],
             "I": [350,350,350],
             "O": [500,500,500],
             "B": [],
             "volumestokeep": [],
             "ref": 2
-        }
-    ],
-    "case 1_2": [
+        },
         {
             "R": [3500,3500,3500],
             "I": [350,350,350],
@@ -32,14 +33,19 @@
             "B": [],
             "volumestokeep": [],
             "ref": 3
-        },{
+        }
+    ],
+    "case 1_3":[
+        {
             "R": [3500,3500,3500],
             "I": [175,175,175],
             "O": [250,250,250],
             "B": [],
             "volumestokeep": [],
             "ref": 4
-        },
+        }
+    ],
+    "case 1_4":[
         {
             "R": [3500,3500,3500],
             "I": [350,875,350],
@@ -57,16 +63,6 @@
             "ref": 6
         }
     ],
-    "case 1_3": [
-        {
-            "R": [3500,3500,3500],
-            "I": [350,875,350],
-            "O": [500,875,500],
-            "B": [],
-            "volumestokeep": [],
-            "ref": 5
-        }
-    ],
     "case 3_1": [
         {
             "R": [3500,3500,3500],
@@ -75,18 +71,21 @@
             "B": [175, 3500, 3500],  
             "volumestokeep": [1, 2, 3],
             "ref": 0
-        },{
-            "R": [3500,3500,3500],
-            "I": [350,350,350],
-            "O": [3500,3500,3500],
-            "B": [175, 3500, 3500],
-            "volumestokeep": [1, 2, 3],
-            "ref": 1
-        },{
+        },
+        {
             "R": [3500,3500,3500],
             "I": [875,875,875],
             "O": [875,875,3500],
             "B": [700, 875, 3500],
+            "volumestokeep": [1, 2, 3],
+            "ref": 1
+        }
+    ],
+    "case 3_2": [{
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [3500,3500,3500],
+            "B": [175, 3500, 3500],
             "volumestokeep": [1, 2, 3],
             "ref": 2
         },{
@@ -98,38 +97,42 @@
             "ref": 3
         }
     ],
-    "case 3_2": [
+    "case 3_3": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [350,3500,350],
+            "B": [350, 3500, 350],
+            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
+            "ref": 4
+        },
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [3500,350,350],
+            "B": [3500, 350, 350],
+            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
+            "ref": 5
+        }
+    ],
+    "case 3_4": [
         {
             "R": [3500,3500,3500],
             "I": [875,875,875],
             "O": [875,3500,875],
             "B": [700, 3500, 875],
             "volumestokeep": [1, 2, 3],
-            "ref": 4
-        },{
-            "R": [3500,3500,3500],
-            "I": [350,350,350],
-            "O": [350,3500,350],
-            "B": [350, 3500, 350],
-            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
-            "ref": 5
+            "ref": 6
         },{
             "R": [3500,3500,3500],
             "I": [875,875,875],
             "O": [3500,875,875],
             "B": [1750, 875, 875],
             "volumestokeep": [1, 2, 3],
-            "ref": 6
-        },{
-            "R": [3500,3500,3500],
-            "I": [350,350,350],
-            "O": [3500,350,350],
-            "B": [3500, 350, 350],
-            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
             "ref": 7
         }
     ],
-    "case 3_3": [
+    "case 3_5": [
         {
             "R": [3500,3500,3500],
             "I": [875,875,875],
