--- a/repartition_experiments/cases_config.json
+++ b/repartition_experiments/cases_config.json
@@ -1,5 +1,5 @@
 {
-    "case 1_1": [
+    "case 1_0": [
         {
             "R": [3500,3500,3500],
             "I": [875,875,875],
@@ -7,7 +7,9 @@
             "B": [],
             "volumestokeep": [],
             "ref": 0
-        },
+        }
+    ],
+    "case 1_1": [
         {
             "R": [3500,3500,3500],
             "I": [875,875,875],
@@ -63,91 +65,55 @@
             "ref": 6
         }
     ],
+    "case 2_1": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [500,500,500],
+            "B": [500,700,700],
+            "volumestokeep": [1,2,3],
+            "ref": 0
+        },{
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [500,500,500],
+            "B": [350,700,700],
+            "volumestokeep": [1,2,3],
+            "ref": 1
+        },
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [500,500,500],
+            "B": [175,700,700],
+            "volumestokeep": [1,2,3],
+            "ref": 2
+        },
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [500,500,500],
+            "B": [1,500,700],
+            "volumestokeep": [1],
+            "ref": 3
+        }
+    ],
     "case 3_1": [
         {
             "R": [3500,3500,3500],
             "I": [875,875,875],
             "O": [3500,3500,3500],
-            "B": [175, 3500, 3500],  
+            "B": [700, 3500, 3500],  
             "volumestokeep": [1, 2, 3],
             "ref": 0
         },
         {
             "R": [3500,3500,3500],
-            "I": [875,875,875],
-            "O": [875,875,3500],
-            "B": [700, 875, 3500],
+            "I": [350,350,350],
+            "O": [3500,3500,3500],
+            "B": [250, 3500, 3500],
             "volumestokeep": [1, 2, 3],
             "ref": 1
-        }
-    ],
-    "case 3_2": [{
-            "R": [3500,3500,3500],
-            "I": [350,350,350],
-            "O": [3500,3500,3500],
-            "B": [175, 3500, 3500],
-            "volumestokeep": [1, 2, 3],
-            "ref": 2
-        },{
-            "R": [3500,3500,3500],
-            "I": [350,350,350],
-            "O": [350,350,3500],
-            "B": [350, 350, 3500],
-            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
-            "ref": 3
-        }
-    ],
-    "case 3_3": [
-        {
-            "R": [3500,3500,3500],
-            "I": [350,350,350],
-            "O": [350,3500,350],
-            "B": [350, 3500, 350],
-            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
-            "ref": 4
-        },
-        {
-            "R": [3500,3500,3500],
-            "I": [350,350,350],
-            "O": [3500,350,350],
-            "B": [3500, 350, 350],
-            "volumestokeep": [1, 2, 3, 4, 5, 6, 7],
-            "ref": 5
-        }
-    ],
-    "case 3_4": [
-        {
-            "R": [3500,3500,3500],
-            "I": [875,875,875],
-            "O": [875,3500,875],
-            "B": [700, 3500, 875],
-            "volumestokeep": [1, 2, 3],
-            "ref": 6
-        },{
-            "R": [3500,3500,3500],
-            "I": [875,875,875],
-            "O": [3500,875,875],
-            "B": [1750, 875, 875],
-            "volumestokeep": [1, 2, 3],
-            "ref": 7
-        }
-    ],
-    "case 3_5": [
-        {
-            "R": [3500,3500,3500],
-            "I": [875,875,875],
-            "O": [3500,3500,3500],
-            "B": [500,3500,3500],
-            "volumestokeep": [1, 2, 3],
-            "ref": 8
-        },
-        {
-            "R": [3500,3500,3500],
-            "I": [875,875,875],
-            "O": [3500,3500,3500],
-            "B": [350,3500,3500],
-            "volumestokeep": [1, 2, 3],
-            "ref": 9
         }
     ]
 }
