--- a/repartition_experiments/cases_config.json
+++ b/repartition_experiments/cases_config.json
@@ -77,14 +77,16 @@
             "B": [500,700,700],
             "volumestokeep": [1,2,3],
             "ref": 0
-        },{
+        }],
+    "case 2_1": [{
             "R": [3500,3500,3500],
             "I": [350,350,350],
             "O": [500,500,500],
             "B": [350,700,700],
             "volumestokeep": [1,2,3],
             "ref": 1
-        },
+    }],
+    "case 2_2": [
         {
             "R": [3500,3500,3500],
             "I": [350,350,350],
@@ -92,7 +94,8 @@
             "B": [175,700,700],
             "volumestokeep": [1,2,3],
             "ref": 2
-        },
+        }],
+    "case 2_3": [
         {
             "R": [3500,3500,3500],
             "I": [350,350,350],
