--- a/repartition_experiments/cases_config.json
+++ b/repartition_experiments/cases_config.json
@@ -124,5 +124,85 @@
             "volumestokeep": [1, 2, 3],
             "ref": 1
         }
+    ],
+    "case 4_0": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [700,700,700],
+            "B": [1,250,700],
+            "volumestokeep": [1],
+            "ref": 0
+        }
+    ],
+    "case 4_1": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [700,700,700],
+            "B": [1,350,700],
+            "volumestokeep": [1],
+            "ref": 1
+        }
+    ],
+    "case 4_2": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [700,700,700],
+            "B": [1,500,700],
+            "volumestokeep": [1,2,3],
+            "ref": 2
+        }
+    ],
+    "case 4_3": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [700,700,700],
+            "B": [1,700,700],
+            "volumestokeep": [1,2,3],
+            "ref": 3
+        }
+    ],
+    "case 4_4": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [700,700,700],
+            "B": [250,700,700],
+            "volumestokeep": [1,2,3],
+            "ref": 4
+        }
+    ],
+    "case 4_5": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [700,700,700],
+            "B": [350,700,700],
+            "volumestokeep": [1,2,3],
+            "ref": 5
+        }
+    ],
+    "case 4_6": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [700,700,700],
+            "B": [500,700,700],
+            "volumestokeep": [1,2,3,4,5,6,7],
+            "ref": 6
+        }
+    ],
+    "case 4_7": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [700,700,700],
+            "B": [700,700,700],
+            "volumestokeep": [1,2,3,4,5,6,7],
+            "ref": 7
+        }
     ]
 }
