added new runs to case 3

--- a/repartition_experiments/cases_config.json
+++ b/repartition_experiments/cases_config.json
@@ -125,6 +125,36 @@
             "ref": 1
         }
     ],
+    "case 3_2": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [3500,3500,3500],
+            "B": [175, 3500, 3500],
+            "volumestokeep": [1, 2, 3],
+            "ref": 1
+        }
+    ],
+    "case 3_3": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [3500,3500,3500],
+            "B": [125, 3500, 3500],
+            "volumestokeep": [1, 2, 3],
+            "ref": 1
+        }
+    ],
+    "case 3_4": [
+        {
+            "R": [3500,3500,3500],
+            "I": [350,350,350],
+            "O": [3500,3500,3500],
+            "B": [1, 3500, 3500],
+            "volumestokeep": [1, 2, 3],
+            "ref": 1
+        }
+    ],
     "case 4_0": [
         {
             "R": [3500,3500,3500],
