--- a/repartition_experiments/mid_cases_config.json
+++ b/repartition_experiments/mid_cases_config.json
@@ -61,5 +61,15 @@
             "volumestokeep": [],
             "ref": 3
         }
+    ],
+    "case 3_0": [
+        {
+            "R": [1400,1400,1400],
+            "I": [350,350,350],
+            "O": [1400,1400,1400],
+            "B": [],
+            "volumestokeep": [],
+            "ref": 0
+        }
     ]
 }
