--- a/repartition_experiments/small_cases_config.json
+++ b/repartition_experiments/small_cases_config.json
@@ -121,5 +121,15 @@
             "volumestokeep": [],
             "ref": 6
         }
+    ],
+    "case 3_0": [
+        {
+            "R": [700,700,700],
+            "I": [70,175,70],
+            "O": [700,700,700],
+            "B": [],
+            "volumestokeep": [],
+            "ref": 6
+        }
     ]
 }
