--- a/repartition_experiments/mid_cases_config.json
+++ b/repartition_experiments/mid_cases_config.json
@@ -62,13 +62,13 @@
             "ref": 3
         }
     ],
-    "case 3_0": [
+    "case 3_0":[
         {
             "R": [1400,1400,1400],
-            "I": [350,350,350],
+            "I": [200,200,200],
             "O": [1400,1400,1400],
-            "B": [],
-            "volumestokeep": [],
+            "B": [140,1400,1400],
+            "volumestokeep": [1, 2, 3],
             "ref": 0
         }
     ]
