Revert "replaced array list to one array in cache"
This reverts commit 673ff8a11d018fbc3cfc1726b1858fbd07a73abd.

--- a/repartition_experiments/mid_cases_config.json
+++ b/repartition_experiments/mid_cases_config.json
@@ -62,13 +62,13 @@
             "ref": 3
         }
     ],
-    "case 3_0":[
+    "case 3_0": [
         {
             "R": [1400,1400,1400],
-            "I": [200,200,200],
+            "I": [350,350,350],
             "O": [1400,1400,1400],
-            "B": [140,1400,1400],
-            "volumestokeep": [1, 2, 3],
+            "B": [],
+            "volumestokeep": [],
             "ref": 0
         }
     ]
