all working, memory leak reduced

--- a/repartition_experiments/mid_cases_config.json
+++ b/repartition_experiments/mid_cases_config.json
@@ -71,5 +71,15 @@
             "volumestokeep": [],
             "ref": 0
         }
+    ],
+    "case 3_1":[
+        {
+            "R": [1400,1400,1400],
+            "I": [200,200,200],
+            "O": [1400,1400,1400],
+            "B": [140,1400,1400],
+            "volumestokeep": [1,2,3],
+            "ref": 6
+        }
     ]
 }
