--- a/repartition_experiments/mid_cases_config.json
+++ b/repartition_experiments/mid_cases_config.json
@@ -7,7 +7,8 @@
             "B": [],
             "volumestokeep": [],
             "ref": 0
-        },
+        }],
+    "case 1_1":[
         {
             "R": [1400,1400,1400],
             "I": [350,350,350],
@@ -16,7 +17,7 @@
             "volumestokeep": [],
             "ref": 1
         }],
-    "case 1_1":[
+    "case 1_2":[
         {
             "R": [1400,1400,1400],
             "I": [140,140,140],
@@ -24,7 +25,8 @@
             "B": [],
             "volumestokeep": [],
             "ref": 2
-        },
+        }], 
+    "case 1_3": [
         {
             "R": [1400,1400,1400],
             "I": [140,140,140],
@@ -33,7 +35,7 @@
             "volumestokeep": [],
             "ref": 3
         }],
-    "case 1_2":[
+    "case 1_4":[
         {
             "R": [1400,1400,1400],
             "I": [70,70,70],
@@ -42,7 +44,7 @@
             "volumestokeep": [],
             "ref": 4
         }],
-    "case 1_3":[
+    "case 1_5":[
         {
             "R": [1400,1400,1400],
             "I": [200,200,200],
@@ -52,7 +54,7 @@
             "ref": 6
         }
     ],
-    "case 1_4":[
+    "case 1_6":[
         {
             "R": [1400,1400,1400],
             "I": [140,140,140],
@@ -67,8 +69,8 @@
             "R": [1400,1400,1400],
             "I": [350,350,350],
             "O": [1400,1400,1400],
-            "B": [],
-            "volumestokeep": [],
+            "B": [140,1400,1400],
+            "volumestokeep": [1,2,3],
             "ref": 0
         }
     ],
