--- a/repartition_experiments/cases_config.json
+++ b/repartition_experiments/cases_config.json
@@ -4,8 +4,8 @@
             "R": [3500,3500,3500],
             "I": [875,875,875],
             "O": [875,1750,875],
-            "B": [],
-            "volumestokeep": [],
+            "B": [875,1750,875],
+            "volumestokeep": [1,2,3,4,5,6,7],
             "ref": 0
         }
     ],
