update cluster config

--- a/repartition_experiments/paths_config.json
+++ b/repartition_experiments/paths_config.json
@@ -1,4 +1,5 @@
 {
+    "PYTHONPATH_monitor": "/home/gtimothee/monitor",
     "PYTHONPATH_repartition": "/home/gtimothee/repartition_experiments",
     "ssd_path": "/disk2/gtimothee",
     "outdir_path": "/home/gtimothee/outputs"
