--- a/repartition_experiments/big_cases_config.json
+++ b/repartition_experiments/big_cases_config.json
@@ -59,8 +59,8 @@
             "R": [8000,8000,8000],
             "I": [400,400,400],
             "O": [500,500,500],
-            "B": [],
-            "volumestokeep": [],
+            "B": [800,800,800],
+            "volumestokeep": [1,2,3,4,5,6,7],
             "ref": 6
         }
     ],
