--- a/repartition_experiments/big_cases_config.json
+++ b/repartition_experiments/big_cases_config.json
@@ -20,8 +20,8 @@
             "R": [8000,8000,8000],
             "I": [800,800,800],
             "O": [1000,1000,1000],
-            "B": [],
-            "volumestokeep": [],
+            "B": [1600,1600,1600],
+            "volumestokeep": [1,2,3,4,5,6,7],
             "ref": 2
         }],
     "case 2_3": [
@@ -29,8 +29,8 @@
             "R": [8000,8000,8000],
             "I": [800,800,800],
             "O": [500,500,500],
-            "B": [],
-            "volumestokeep": [],
+            "B": [800,800,800],
+            "volumestokeep": [1,2,3,4,5,6,7],
             "ref": 3
         }
     ],
@@ -39,8 +39,8 @@
             "R": [8000,8000,8000],
             "I": [200,200,200],
             "O": [250,250,250],
-            "B": [],
-            "volumestokeep": [],
+            "B": [400,400,400],
+            "volumestokeep": [1,2,3,4,5,6,7],
             "ref": 4
         }
     ],
@@ -49,8 +49,8 @@
             "R": [8000,8000,8000],
             "I": [200,200,200],
             "O": [160,160,160],
-            "B": [],
-            "volumestokeep": [],
+            "B": [200,200,200],
+            "volumestokeep": [1,2,3,4,5,6,7],
             "ref": 5
         }
     ],
@@ -69,8 +69,8 @@
             "R": [8000,8000,8000],
             "I": [400,400,400],
             "O": [250,250,250],
-            "B": [],
-            "volumestokeep": [],
+            "B": [400,400,400],
+            "volumestokeep": [1,2,3,4,5,6,7],
             "ref": 7
         }
     ]
