--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ backcall==0.1.0
 bleach==3.1.0
 bokeh==1.3.4
 cachey==0.1.1
-certifi==2019.11.28
+certifi==2020.6.20
 Click==7.0
 cloudpickle==1.2.1
 cycler==0.10.0
@@ -15,6 +15,7 @@ defusedxml==0.6.0
 dill==0.3.0
 distributed==2.2.0
 entrypoints==0.3
+filprofiler==0.7.2
 fsspec==0.6.2
 graphviz==0.13.2
 h5py==2.9.0
@@ -32,10 +33,15 @@ jupyter-client==5.3.4
 jupyter-console==6.0.0
 jupyter-core==4.6.1
 kiwisolver==1.1.0
+line-profiler==3.0.2
 locket==0.2.0
 MarkupSafe==1.1.1
 matplotlib==3.1.1
+memory-profiler==0.57.0
 mistune==0.8.4
+mkl-fft==1.0.15
+mkl-random==1.1.0
+mkl-service==2.3.0
 more-itertools==7.2.0
 msgpack==0.6.1
 nbconvert==5.6.0
@@ -54,7 +60,7 @@ Pillow==6.2.1
 pluggy==0.12.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
-psutil==5.6.3
+psutil==5.7.0
 ptyprocess==0.6.0
 py==1.8.0
 pycodestyle==2.5.0
