--- a/requirements_conda.txt
+++ b/requirements_conda.txt
@@ -8,10 +8,10 @@ backcall=0.1.0=py37_0
 blas=1.0=mkl
 bleach=3.1.0=py37_0
 bokeh=1.3.4=py37_0
-ca-certificates=2020.1.1=0
+ca-certificates=2020.6.24=0
 cachey=0.1.1=py37_0
 cairo=1.14.12=h8948797_3
-certifi=2019.11.28=py37_1
+certifi=2020.6.20=py37_0
 click=7.0=py37_0
 cloudpickle=1.2.1=py_0
 cycler=0.10.0=py37_0
@@ -25,6 +25,7 @@ dill=0.3.0=py37_0
 distributed=2.2.0=py_1
 entrypoints=0.3=py37_0
 expat=2.2.6=he6710b0_0
+filprofiler=0.7.2=pypi_0
 fontconfig=2.13.0=h9420a91_0
 freetype=2.9.1=h8a8886c_1
 fribidi=1.0.5=h7b6447c_0
@@ -66,9 +67,11 @@ libtiff=4.1.0=h2733197_0
 libuuid=1.0.3=h1bed415_2
 libxcb=1.13=h1bed415_1
 libxml2=2.9.9=hea5a465_1
+line-profiler=3.0.2=pypi_0
 locket=0.2.0=py37_1
 markupsafe=1.1.1=py37h7b6447c_0
 matplotlib=3.1.1=py37h5429711_0
+memory_profiler=0.57.0=py_0
 mistune=0.8.4=py37h7b6447c_0
 mkl=2019.4=243
 mkl-service=2.3.0=py37he904b0f_0
@@ -83,7 +86,7 @@ notebook=6.0.0=py37_0
 numpy=1.17.4=py37hc1035e2_0
 numpy-base=1.17.4=py37hde5b4d6_0
 olefile=0.46=py37_0
-openssl=1.1.1e=h7b6447c_0
+openssl=1.1.1g=h7b6447c_0
 packaging=19.1=py37_0
 pandas=0.25.0=py37he6710b0_0
 pandoc=2.2.3.2=0
@@ -100,7 +103,7 @@ pixman=0.38.0=h7b6447c_0
 pluggy=0.12.0=py_0
 prometheus_client=0.7.1=py_0
 prompt_toolkit=2.0.10=py_0
-psutil=5.6.3=py37h7b6447c_0
+psutil=5.7.0=py37h7b6447c_0
 ptyprocess=0.6.0=py37_0
 py=1.8.0=py37_0
 pycodestyle=2.5.0=py37_0
